--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <div class="navbar">
             <img src="img/logo.png" alt="" class="logo" />
             <ul class="links">
-                <li><a href="#">My Card</a></li>
-                <li><a href="#">Listings</a></li>
-                <li><a href="#">Post</a></li>
+                <li><a href="index.html">My Card</a></li>
+                <li><a href="index.html">Marketplace</a></li>
+                <li><a href="index.html">Log In</a></li>
             </ul>
         </div>
         <hr class="green-divider" />
@@ -20,7 +20,7 @@
             <h1 class="header">Your Programmer Card</h1>
             <div class="card-container">
                 <div class="card-buttons">
-                    <button class="card-buttons" id="copy">
+                    <a href="code.html" class="" id="copy">
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="45"
@@ -49,7 +49,7 @@
                                 stroke-linejoin="round"
                             />
                         </svg>
-                    </button>
+                    </a>
                     <button class="card-buttons" id="edit">
                         <svg
                             xmlns="http://www.w3.org/2000/svg"
@@ -99,6 +99,21 @@
                 >
                     <h2 id="card-name" class="card-name">John</h2>
                     <p id="card-title" class="card-title">Software Engineer</p>
+                </div>
+                <div class="click-on-me" id="click-text">
+                    <p>Click on me</p>
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="33"
+                        height="17"
+                        viewBox="0 0 33 17"
+                        fill="none"
+                    >
+                        <path
+                            d="M0.833333 3C0.833333 4.47276 2.02724 5.66667 3.5 5.66667C4.97276 5.66667 6.16667 4.47276 6.16667 3C6.16667 1.52724 4.97276 0.333333 3.5 0.333333C2.02724 0.333333 0.833333 1.52724 0.833333 3ZM33 8.5L27.6991 10.7877L32.3307 14.2346L33 8.5ZM3.02415 3.1535C7.53929 17.1504 22.5434 20.5155 30.6649 12.4659L29.9609 11.7556C22.4566 19.1936 8.30104 16.2546 3.97585 2.8465L3.02415 3.1535Z"
+                            fill="white"
+                        />
+                    </svg>
                 </div>
                 <div
                     class="card"
