React My Card page

--- a/Vanilla Programmer Cards/index.html
+++ b/Vanilla Programmer Cards/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <div class="navbar">
-            <img src="img/logo.png" alt="" class="logo" />
+            <a href="index.html"
+                ><img src="img/logo.png" alt="" class="logo"
+            /></a>
             <ul class="links">
                 <li><a href="index.html">My Card</a></li>
                 <li><a href="index.html">Marketplace</a></li>
